=================
Changes for crash
=================

Unreleased
==========

2014/10/27 0.10.3
=================

 - require crate-python 0.12.3 to get support for the iterator protocol
   on cursor

 - Fixed an error that caused crash to crash on non posix platforms.

2014/10/02 0.10.2
=================

 - require crate-python 0.12.1 so crash sends the correct Accept Header when
   requesting crate

2014/09/19 0.10.1
=================

 - increased crate-python requirement to 0.11.2 for the improved failover
   mechanism

2014/09/02 0.10.0
=================

 - crate server version information is now also included in the connect-output.

 - improved formatting of field lists in docs
  by adding docutils configuration to docs build process

 - updated crate-python to version 0.11.1 to get a more reliable failover
   mechanism if a host goes down.

2014/07/18 0.9.14
=================

 - fix: correctly apply ``-v`` switch to increase verbosity

 - update crate-python to version 0.10.6

2014/06/27 0.9.13
=================

 - fix: avoid stripping arbitrative whitespaces from
   commands passed via stdin

2014/06/12 0.9.12
=================

 - fixed output encoding when LC_CTYPE locale is not UTF-8

2014/06/04 0.9.11
=================

 - added support for SQL SET and RESET statements

2014/06/03 0.9.10
=================

 - NULL values are now handled correctly.

2014/06/03 0.9.9
================

 - fix: increased precision of float formatting

2014/06/03 0.9.8
================

 - crash renders complex types as json now instead of python representation

 - fix: update crate-python to 0.10.2 to print -1 for rowcount if rowcount
   is unknown

2014/05/23 0.9.7
================

 - return exit code 1 if the execution of a single command fails

2014/05/20 0.9.6
================

 - bugfix: crash exited immediately with an exception if a query result
   contained an object or array

 - the size of the history file is now limited to 10000 lines
