@@ -1,5 +1,5 @@
-CRATE Python Adapter
-Copyright 2013-2014 CRATE Technology GmbH ("Crate")
+Crate Shell (Crash)
+Copyright 2013-2015 CRATE Technology GmbH ("Crate")
 
 
 Licensed to CRATE Technology GmbH (referred to in this notice as "Crate")
