@@ -1,5 +1,5 @@
-Crate Python Adapter
-Copyright 2013-2014 CRATE Technology GmbH ("Crate")
+Crate Shell (Crash)
+Copyright 2013-2015 CRATE Technology GmbH ("Crate")
 
 
 Third party dependencies:
