@@ -27,6 +27,8 @@ import re
 
 requirements = [
     'setuptools',
+    'colorama',
+    'Pygments',
     'crate>=0.11.2',
     'appdirs>=1.2,<2.0',
 ]
