@@ -1,9 +1,9 @@
 [versions]
-crate_server = 0.45.2
+crate_server = 0.46.3
 
 Jinja2 = 2.7.3
 MarkupSafe = 0.23
-Pygments = 1.6
+Pygments = 2.0.2
 Sphinx = 1.2.3
 appdirs = 1.4.0
 collective.recipe.omelette = 0.16
@@ -28,7 +28,7 @@ zope.testing = 4.1.3
 # zope.exceptions==4.0.7
 # zope.interface==4.1.1
 # zope.testrunner==4.4.3
-setuptools = 7.0
+setuptools = 8.0
 
 # Required by:
 # crate==0.12.3
